--- a/index.html
+++ b/index.html
@@ -120,31 +120,31 @@
         <h3>Langages de Programmation</h3>
         <div class="skills-container">
             <div class="skill">
-                <img src="C:\image_portfolio\logo_c.png" alt="C">
+                <img src="C:\Projet_html_portfolio\image_portfolio\logo_c.png" alt="C">
                 <h4>C</h4>
             </div>
             <div class="skill">
-                <img src="C:\image_portfolio\logo_c++.png" alt="C++">
+                <img src="C:\Projet_html_portfolio\image_portfolio\logo_c++.png" alt="C++">
                 <h4>C++</h4>
             </div>
             <div class="skill">
-                <img src="C:\image_portfolio\logo_bash.png" alt="Bash">
+                <img src="C:\Projet_html_portfolio\image_portfolio\logo_bash.png" alt="Bash">
                 <h4>Bash</h4>
             </div>
             <div class="skill">
-                <img src="C:\image_portfolio\logo_python.png" alt="Python">
+                <img src="C:\Projet_html_portfolio\image_portfolio\logo_python.png" alt="Python">
                 <h4>Python</h4>
             </div>
             <div class="skill">
-                <img src="C:\image_portfolio\logo_SQL.png" alt="SQL">
+                <img src="C:\Projet_html_portfolio\image_portfolio\logo_SQL.png" alt="SQL">
                 <h4>SQL</h4>
             </div>
             <div class="skill">
-                <img src="C:\image_portfolio\logo_html.png" alt="HTML">
+                <img src="C:\Projet_html_portfolio\image_portfolio\logo_html.png" alt="HTML">
                 <h4>HTML</h4>
             </div>
             <div class="skill">
-                <img src="C:\image_portfolio\logo_css.png" alt="CSS">
+                <img src="C:\Projet_html_portfolio\image_portfolio\logo_css.png" alt="CSS">
                 <h4>CSS</h4>
             </div>
         </div>
@@ -155,3 +155,5 @@
     </footer>
 </body>
 </html>
+
+
