--- a/projet2.html
+++ b/projet2.html
@@ -63,7 +63,7 @@
         Il s'agit d'un exercice de compréhension et de maîtrise des principes de la communication par radiofréquences.
     </p>
     <!-- Image du projet -->
-    <img src="C:\Projet_html_portfolio\image_portfolio\Capture_Escape_No_Game.png" alt="Image du projet Escape No Game" class="project-image">
+    <img src="image_portfolio\Capture_Escape_No_Game.png" alt="Image du projet Escape No Game" class="project-image">
 
     <!-- Code du projet -->
     <h2>Code du Projet</h2>
