--- a/projet1.html
+++ b/projet1.html
@@ -77,7 +77,7 @@ Le niveau de sécurité n'étant pas le même pour tous les agents, tout ou une 
 Une fois l'ensemble des mécanismes validés, le coffre pourra être ouvert.
     </p>
     <!-- Image du projet -->
-    <img src="image_portfolio\image_strongbox3000.webp" alt="Image du projet Strongbox 3000" class="project-image">
+    <img src="image_portfolio/image_strongbox3000.webp" alt="Image du projet Strongbox 3000" class="project-image">
 
     <!-- Code du projet -->
     <h2>Code du Projet</h2>
