--- a/projet3.html
+++ b/projet3.html
@@ -62,7 +62,7 @@
         Ce projet consiste à simuler et calculer la faisabilité de défis liés à des voitures de course, en prenant en compte divers paramètres de physique appliquée et de modélisation.
     </p>
     <!-- Image du projet -->
-    <img src="image_portfolio\Capture_F&F.png" alt="Image du projet Fast and Furious" class="project-image">
+    <img src="image_portfolio/Capture_F&F.png" alt="Image du projet Fast and Furious" class="project-image">
 
     <!-- Code du projet -->
     <h2>Code du Projet</h2>
